[project]
name = "dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Cyrus Vandrevala",email = "cyrus.vandrevala@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "dash (>=3.2.0)",
  "pandas (>=2.3.3,<3.0.0)",
  "dash-bootstrap-components (>=2.0.4,<3.0.0)",
  "pyyaml (>=6.0.3,<7.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "anytree (>=2.13.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dashboard", from = "src"}]

[project.scripts]
dashboard = 'dashboard.main:start'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
